<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailsFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/ivRecipeImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_image_height"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvDishTitle"
                app:srcCompat="@android:color/holo_orange_light" />

            <TextView
                android:id="@+id/tvDishTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:paddingLeft="@dimen/medium_padding"
                android:paddingRight="@dimen/medium_padding"
                android:text="@string/dish_title"
                android:textColor="@color/black"
                android:textSize="@dimen/details_dish_text_size"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ivRecipeImage"
                android:layout_margin="@dimen/medium_padding"
                android:text="@string/ingredients"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvIngredients"
                android:layout_margin="@dimen/medium_padding"
                android:text="@string/instructions"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvInstructions"
                android:layout_marginBottom="@dimen/medium_padding"
                android:layout_marginLeft="@dimen/medium_padding"
                android:layout_marginTop="@dimen/medium_padding"
                android:background="@color/gray_button"
                android:text="@string/back" />
        </RelativeLayout>
    </ScrollView>

</FrameLayout>