<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DeleteItemFragment"
    android:padding="@dimen/outside_padding_pop_ups">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">


        <Button
            android:id="@+id/btnDeleteItem"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignEnd="@+id/tvDeleteQuestion"
            android:layout_below="@+id/tvDeleteQuestion"
            android:layout_marginTop="@dimen/margin_above_button"
            android:background="@drawable/button"
            android:backgroundTint="@color/theme_brown"
            android:fontFamily="@font/flaco_medium"
            android:text="@string/delete_item"
            android:textColor="@color/white"
            android:textSize="@dimen/pop_up_button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignStart="@+id/tvDeleteQuestion"
            android:layout_below="@+id/tvDeleteQuestion"
            android:layout_marginTop="@dimen/margin_above_button"
            android:background="@drawable/button"
            android:backgroundTint="@color/gray_button"
            android:fontFamily="@font/flaco_medium"
            android:text="@string/cancel"
            android:textSize="@dimen/pop_up_button_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDeleteQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/flaco_medium"
            android:text="@string/delete_item_question"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="@dimen/pop_up_text_size" />

    </RelativeLayout>

</FrameLayout>